Fixed spacing between 'Know your competition' & tabpanels to be responsive.

--- a/css/variables/custom.css
+++ b/css/variables/custom.css
@@ -25,10 +25,6 @@
     margin-bottom: -400px;
 }
 
-#competiton-section {
-    margin-bottom: -300px;
-}
-
 #watch-video {
     border-radius: 10px;
 }
